# masscalculator-gui

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: conan.cmake  install.cmake
conan/: conanfile.txt
docs/: BUILD.md  ENVIRONMENT.md  SETUP.md
docs/doxygen/: Doxyfile.in
executables/: CMakeLists.txt
executables/apps/: CMakeLists.txt
executables/apps/masscalculator-gui/: CMakeLists.txt
executables/apps/masscalculator-gui/config/: software_version.h.in
executables/apps/masscalculator-gui/include/masscalculator/masscalculator-gui/: backend.h
executables/apps/masscalculator-gui/qml/masscalculator/masscalculator-gui/: MainWindow.qml  main.qml  masscalculator_masscalculator-gui.qrc
executables/apps/masscalculator-gui/src/: backend.cc  main.cc
tools/: envsetup.sh
tools/installers/: essentials.sh
